fixed frontend styles and alignments

--- a/client/src/components/Footer/Footer.module.css
+++ b/client/src/components/Footer/Footer.module.css
@@ -2,6 +2,7 @@
     border-top: solid 1px rgb(219, 219, 219);
     width: 100%;
     margin: 0px auto;
+    margin-top: 210px;
     text-align: center;
     padding: 25px;
     text-align: center;
