--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -31,7 +31,7 @@
     background-color: white;
     color: rgb(51, 51, 216);
     cursor: pointer;
-    font-size: 15px;
+    font-size: 20px;
     outline: none;
     margin-right: 20px;
     /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
